# pywrdrb-mcp

./: .gitignore  .mcp.json  MCP_IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
.claude/: settings.json
examples/: 01_exploring_the_network.md  02_working_with_parameters.md  03_ffmp_operations.md  04_simulation_results.md  05_building_models.md
src/pywrdrb_mcp/: __init__.py  __main__.py  config.py  server.py
src/pywrdrb_mcp/content/: data_loading.md  ffmp_rules.md  flood_operations.md  getting_started.md  post_processing.md  preprocessing.md  starfit_rules.md
src/pywrdrb_mcp/index/: __init__.py  ast_utils.py  builder.py  file_utils.py
src/pywrdrb_mcp/prompts/: templates.py
src/pywrdrb_mcp/resources/: static.py
src/pywrdrb_mcp/tools/: code.py  data.py  data_object.py  ffmp_data.py  lists.py  model_builder.py  parameters.py  topology.py
tests/: test_ast_utils.py  test_index.py  test_tools.py
